@@ -37,6 +37,10 @@ import com.dotcms.contenttype.model.type.ContentTypeIf;
 import com.dotcms.contenttype.transform.contenttype.ContentTypeTransformer;
 import com.dotcms.contenttype.transform.contenttype.StructureTransformer;
 import com.dotcms.contenttype.transform.field.LegacyFieldTransformer;
+
+import com.dotcms.experiments.business.ExperimentFilter;
+
+import com.dotcms.experiments.model.Experiment;
 import com.dotcms.notifications.bean.NotificationLevel;
 import com.dotcms.publisher.business.DotPublisherException;
 import com.dotcms.publisher.business.PublisherAPI;
@@ -48,6 +52,7 @@ import com.dotcms.rest.api.v1.temp.TempFileAPI;
 import com.dotcms.storage.FileMetadataAPI;
 import com.dotcms.storage.model.Metadata;
 import com.dotcms.system.event.local.business.LocalSystemEventsAPI;
+import com.dotcms.system.event.local.model.Subscriber;
 import com.dotcms.system.event.local.type.content.CommitListenerEvent;
 import com.dotcms.util.CollectionsUtils;
 import com.dotcms.util.ConversionUtils;
@@ -120,6 +125,7 @@ import com.dotmarketing.portlets.folders.business.FolderAPI;
 import com.dotmarketing.portlets.folders.model.Folder;
 import com.dotmarketing.portlets.htmlpageasset.business.HTMLPageAssetAPI;
 import com.dotmarketing.portlets.htmlpageasset.business.HTMLPageAssetAPI.TemplateContainersReMap;
+import com.dotmarketing.portlets.htmlpageasset.model.HTMLPageAsset;
 import com.dotmarketing.portlets.htmlpageasset.model.IHTMLPage;
 import com.dotmarketing.portlets.languagesmanager.business.LanguageAPI;
 import com.dotmarketing.portlets.languagesmanager.model.Language;
@@ -221,12 +227,6 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.dotcms.exception.ExceptionUtil.bubbleUpException;
-import static com.dotcms.exception.ExceptionUtil.getLocalizedMessageOrDefault;
-import static com.dotmarketing.business.PermissionAPI.PERMISSION_CAN_ADD_CHILDREN;
-import static com.dotmarketing.portlets.contentlet.model.Contentlet.URL_MAP_FOR_CONTENT_KEY;
-import static com.dotmarketing.portlets.personas.business.PersonaAPI.DEFAULT_PERSONA_NAME_KEY;
-
 /**
  * Implementation class for the {@link ContentletAPI} interface.
  *
@@ -241,6 +241,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
     private static final String FAILED_TO_DELETE_UNARCHIVED_CONTENT = "Failed to delete unarchived content. Content must be archived first before it can be deleted.";
     private static final String NEVER_EXPIRE = "NeverExpire";
     private static final String CHECKIN_IN_PROGRESS = "__checkin_in_progress__";
+
+    private static final String IS_NEW_CONTENT = "__IS_NEW_CONTENT__";
 
     private final ContentletIndexAPIImpl indexAPI;
     private final ESContentFactoryImpl contentFactory;
@@ -673,14 +675,14 @@ public class ESContentletAPIImpl implements ContentletAPI {
                             .getContentletVersionInfo(identifier, tryLanguage);
 
             // try the fallback if does not exists
-            if (tryLanguage != defaultLanguageId && (!contentletVersionInfo.isPresent()
+            if (tryLanguage != defaultLanguageId && (contentletVersionInfo.isEmpty()
                     || (live && contentletVersionInfo.get().getLiveInode() == null))) {
                 fallback = true;  // using the fallback
                 contentletVersionInfo = APILocator.getVersionableAPI()
                         .getContentletVersionInfo(identifier, defaultLanguageId);
             }
 
-            if (!contentletVersionInfo.isPresent()) {
+            if (contentletVersionInfo.isEmpty()) {
                 return Optional.empty();
             }
 
@@ -750,12 +752,20 @@ public class ESContentletAPIImpl implements ContentletAPI {
     @CloseDBIfOpened
     @Override
     public Contentlet findContentletByIdentifierAnyLanguage(final String identifier, final String variant) throws DotDataException {
+        return findContentletByIdentifierAnyLanguage(identifier, variant, false);
+    }
+
+    @CloseDBIfOpened
+    @Override
+    public Contentlet findContentletByIdentifierAnyLanguage(final String identifier, final String variant,
+            final boolean includeDeleted) throws DotDataException{
         try {
-            return contentFactory.findContentletByIdentifierAnyLanguage(identifier, variant);
+            return contentFactory.findContentletByIdentifierAnyLanguage(identifier, variant, includeDeleted);
         } catch (Exception e) {
             throw new DotContentletStateException("Can't find contentlet: " + identifier, e);
         }
     }
+
 
     @CloseDBIfOpened
     @Override
@@ -928,7 +938,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                     user, respectFrontendRoles);
             if (contentletOpt.isPresent()) {
 
-                Logger.info(this, "A Workflow has been run instead of a simple publish: " +
+                Logger.debug(this, "A Workflow has been run instead of a simple publish: " +
                         contentlet.getIdentifier());
                 if (!contentlet.getInode().equals(contentletOpt.get().getInode())) {
                     this.copyProperties(contentlet, contentletOpt.get().getMap());
@@ -978,8 +988,14 @@ public class ESContentletAPIImpl implements ContentletAPI {
                             ? contentlet.getInode() : "Unknown"));
 
             //If the contentlet has CMS Owner Publish permission on it, the user creating the new contentlet is allowed to publish
-            final List<Role> roles = permissionAPI.getRoles(contentlet.getPermissionId(),
-                    PermissionAPI.PERMISSION_PUBLISH, "CMS Owner", 0, -1);
+            List<Role> roles = permissionAPI.getRoles(contentlet.getPermissionId(),
+                    PermissionAPI.PERMISSION_PUBLISH, Role.CMS_OWNER_ROLE, 0, -1);
+            if (roles.isEmpty() &&
+                    isNewContentlet(contentlet)) {
+
+                roles = permissionAPI.getRoles(contentlet.getContentType().getPermissionId(),
+                        PermissionAPI.PERMISSION_PUBLISH, Role.CMS_OWNER_ROLE, 0, -1);
+            }
             final Role cmsOwner = APILocator.getRoleAPI().loadCMSOwnerRole();
 
             if (roles.size() > 0) {
@@ -1050,6 +1066,20 @@ public class ESContentletAPIImpl implements ContentletAPI {
         // by now, the publish event is making a duplicate reload events on the site browser
         // so we decided to comment it out by now, and
         //contentletSystemEventUtil.pushPublishEvent(contentlet);
+    }
+
+    private boolean isNewContentlet(final Contentlet contentlet) throws DotDataException {
+        return contentlet.isNew() || null == contentlet.getIdentifier()
+                || ConversionUtils.toBooleanFromDb(contentlet.getMap().getOrDefault(IS_NEW_CONTENT, false))
+                || hasOnlyOneVersion(contentlet);
+    }
+
+    private boolean hasOnlyOneVersion(final Contentlet contentlet) throws DotDataException {
+
+        final int versionCount = new DotConnect().setSQL("SELECT count(*) as count FROM (SELECT 1 FROM contentlet WHERE identifier =? LIMIT 2) AS t")
+                .addParam(contentlet.getIdentifier())
+                .loadInt("count");
+        return versionCount <= 1;
     }
 
     @Override
@@ -1195,8 +1225,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> search(String luceneQuery, int limit, int offset, String sortBy,
             User user, boolean respectFrontendRoles, int requiredPermission)
             throws DotDataException, DotSecurityException {
-        PaginatedArrayList<Contentlet> contents = new PaginatedArrayList<Contentlet>();
-        ArrayList<String> inodes = new ArrayList<String>();
+        PaginatedArrayList<Contentlet> contents = new PaginatedArrayList<>();
+        ArrayList<String> inodes = new ArrayList<>();
 
         PaginatedArrayList<ContentletSearch> list = (PaginatedArrayList) searchIndex(luceneQuery,
                 limit, offset, sortBy, user, respectFrontendRoles);
@@ -1207,7 +1237,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
 
         List<Contentlet> contentlets = findContentlets(inodes);
-        Map<String, Contentlet> map = new HashMap<String, Contentlet>(contentlets.size());
+        Map<String, Contentlet> map = new HashMap<>(contentlets.size());
         for (Contentlet contentlet : contentlets) {
             map.put(contentlet.getInode(), contentlet);
         }
@@ -1352,7 +1382,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             String sortBy, User user, boolean respectFrontendRoles)
             throws DotSecurityException, DotDataException {
         boolean isAdmin = false;
-        List<Role> roles = new ArrayList<Role>();
+        List<Role> roles = new ArrayList<>();
         if (user == null && !respectFrontendRoles) {
             throw new DotSecurityException(
                     "You must specify a user if you are not respecting frontend roles");
@@ -1573,7 +1603,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             final User user, final boolean respectFrontendRoles)
             throws DotSecurityException, DotDataException, DotContentletStateException {
 
-        final List<Map<String, Object>> results = new ArrayList<Map<String, Object>>();
+        final List<Map<String, Object>> results = new ArrayList<>();
         if (contentlet == null || !InodeUtils.isSet(contentlet.getInode())) {
             throw new DotContentletStateException("Contentlet must exist");
         }
@@ -2404,7 +2434,6 @@ public class ESContentletAPIImpl implements ContentletAPI {
         contentlets.add(contentlet);
 
         try {
-
             deleted = delete(contentlets, user, respectFrontendRoles);
             HibernateUtil.addCommitListener
                     (() -> this.localSystemEventsAPI.notify(
@@ -2614,7 +2643,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
 
             final Optional<Boolean> deleteOpt = this.checkAndRunDestroyAsWorkflow(contentlet, user,
                     respectFrontendRoles);
-            if (!deleteOpt.isPresent()) {
+            if (deleteOpt.isEmpty()) {
 
                 contentletsToDelete.add(contentlet);
             } else {
@@ -3010,7 +3039,6 @@ public class ESContentletAPIImpl implements ContentletAPI {
         } else {
 
             if (contentletToDelete.isHTMLPage()) {
-
                 unlinkRelatedContentType(user, contentletToDelete);
             }
 
@@ -3169,7 +3197,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
         List<Contentlet> perCons = permissionAPI.filterCollection(contentlets,
                 PermissionAPI.PERMISSION_PUBLISH, respectFrontendRoles, user);
-        List<Contentlet> contentletsVersion = new ArrayList<Contentlet>();
+        List<Contentlet> contentletsVersion = new ArrayList<>();
         contentletsVersion.addAll(contentlets);
 
         if (perCons.size() != contentlets.size()) {
@@ -3190,7 +3218,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                             respectFrontendRoles));
         }
 
-        List<String> contentletInodes = new ArrayList<String>();
+        List<String> contentletInodes = new ArrayList<>();
         for (Iterator<Contentlet> iter = contentletsVersion.iterator(); iter.hasNext(); ) {
             Contentlet element = iter.next();
             contentletInodes.add(element.getInode());
@@ -3251,7 +3279,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
         List<Contentlet> perCons = permissionAPI.filterCollection(contentlets,
                 PermissionAPI.PERMISSION_PUBLISH, respectFrontendRoles, user);
-        List<Contentlet> contentletsVersion = new ArrayList<Contentlet>();
+        List<Contentlet> contentletsVersion = new ArrayList<>();
         contentletsVersion.addAll(contentlets);
 
         if (perCons.size() != contentlets.size()) {
@@ -3269,7 +3297,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
 
         }
 
-        List<String> contentletInodes = new ArrayList<String>();
+        List<String> contentletInodes = new ArrayList<>();
         for (Iterator<Contentlet> iter = contentletsVersion.iterator(); iter.hasNext(); ) {
             Contentlet element = iter.next();
             contentletInodes.add(element.getInode());
@@ -3303,7 +3331,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                     + " does not have permission to delete some or all of the contentlets");
         }
 
-        ArrayList<Contentlet> contentlets = new ArrayList<Contentlet>();
+        ArrayList<Contentlet> contentlets = new ArrayList<>();
         contentlets.add(contentlet);
         contentFactory.deleteVersion(contentlet);
 
@@ -3516,6 +3544,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                 this.indexAPI.removeContentFromLiveIndex(liveContentlet);
             }
         }
+
 
         // sets deleted to true
         APILocator.getVersionableAPI().setDeleted(workingContentlet, true);
@@ -5634,7 +5663,10 @@ public class ESContentletAPIImpl implements ContentletAPI {
             }
 
             new ContentletLoader().invalidate(contentlet);
-
+            if (isNewContent) {
+                // we mark as new. b/c next actions on the pipe may need to know if it is new or not.
+                contentlet.setProperty(IS_NEW_CONTENT, true);
+            }
         } catch (Exception e) {
             if (createNewVersion && workingContentlet != null && UtilMethods.isSet(
                     workingContentlet.getInode())) {
@@ -6597,7 +6629,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> checkout(List<Contentlet> contentlets, User user,
             boolean respectFrontendRoles)
             throws DotDataException, DotSecurityException, DotContentletStateException {
-        List<Contentlet> result = new ArrayList<Contentlet>();
+        List<Contentlet> result = new ArrayList<>();
         for (Contentlet contentlet : contentlets) {
             result.add(checkout(contentlet.getInode(), user, respectFrontendRoles));
         }
@@ -6609,7 +6641,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> checkoutWithQuery(String luceneQuery, User user,
             boolean respectFrontendRoles)
             throws DotDataException, DotSecurityException, DotContentletStateException {
-        List<Contentlet> result = new ArrayList<Contentlet>();
+        List<Contentlet> result = new ArrayList<>();
         List<Contentlet> cons = search(luceneQuery, 0, -1, "", user, respectFrontendRoles);
         for (Contentlet contentlet : cons) {
             result.add(checkout(contentlet.getInode(), user, respectFrontendRoles));
@@ -6622,7 +6654,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> checkout(String luceneQuery, User user, boolean respectFrontendRoles,
             int offset, int limit)
             throws DotDataException, DotSecurityException, DotContentletStateException {
-        List<Contentlet> result = new ArrayList<Contentlet>();
+        List<Contentlet> result = new ArrayList<>();
         List<Contentlet> cons = search(luceneQuery, limit, offset, "", user, respectFrontendRoles);
         for (Contentlet contentlet : cons) {
             result.add(checkout(contentlet.getInode(), user, respectFrontendRoles));
@@ -6644,6 +6676,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         Map<String, Object> cmap = contentlet.getMap();
         workingContentlet.setStructureInode(contentlet.getStructureInode());
         workingContentlet.setInode(contentletInode);
+        workingContentlet.setVariantId(contentlet.getVariantId());
         copyProperties(workingContentlet, cmap);
         workingContentlet.setInode("");
 
@@ -6904,7 +6937,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             throws DotSecurityException, DotDataException, DotStateException {
         List<Contentlet> contentlets = contentFactory.findAllUserVersions(identifier);
         if (contentlets.isEmpty()) {
-            return new ArrayList<Contentlet>();
+            return new ArrayList<>();
         }
         if (!permissionAPI.doesUserHavePermission(contentlets.get(0), PermissionAPI.PERMISSION_READ,
                 user, respectFrontendRoles)) {
@@ -6922,6 +6955,33 @@ public class ESContentletAPIImpl implements ContentletAPI {
             boolean respectFrontendRoles)
             throws DotSecurityException, DotDataException, DotStateException {
         return findAllVersions(identifier, true, user, respectFrontendRoles);
+    }
+
+    /**
+     *  Returns all versions of a contentlet given a set of identifiers
+     * @param identifiers
+     * @param user
+     * @param respectFrontendRoles
+     * @return
+     * @throws DotDataException
+     * @throws DotSecurityException
+     */
+    @Override
+    public List<Contentlet> findLiveOrWorkingVersions(Set<String> identifiers, User user,
+            boolean respectFrontendRoles) throws DotDataException, DotSecurityException {
+
+        final List<Contentlet> allVersions = contentFactory.findLiveOrWorkingVersions(identifiers);
+        if (allVersions.isEmpty()) {
+            return List.of();
+        }
+        return allVersions.stream().filter(contentlet -> {
+            try {
+                return permissionAPI.doesUserHavePermission(contentlet,
+                        PermissionAPI.PERMISSION_READ, user, respectFrontendRoles);
+            } catch (DotDataException e) {
+                return false;
+            }
+        }).collect(Collectors.toList());
     }
 
     @CloseDBIfOpened
@@ -6951,7 +7011,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             throws DotSecurityException, DotDataException, DotStateException {
         List<Contentlet> contentlets = contentFactory.findAllVersions(identifier, bringOldVersions);
         if (contentlets.isEmpty()) {
-            return new ArrayList<Contentlet>();
+            return new ArrayList<>();
         }
         if (!permissionAPI.doesUserHavePermission(contentlets.get(0), PermissionAPI.PERMISSION_READ,
                 user, respectFrontendRoles)) {
@@ -7014,8 +7074,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
             return;
         }
         List<Field> fields = FieldsCache.getFieldsByStructureInode(contentlet.getStructureInode());
-        List<String> fieldNames = new ArrayList<String>();
-        Map<String, Field> velFieldmap = new HashMap<String, Field>();
+        List<String> fieldNames = new ArrayList<>();
+        Map<String, Field> velFieldmap = new HashMap<>();
 
         for (Field field : fields) {
             if (!field.getFieldType().equals(Field.FieldType.LINE_DIVIDER.toString())
@@ -7049,6 +7109,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                                     || property.getValue() instanceof BigDecimal
                                     || property.getValue() instanceof Short
                                     || property.getValue() instanceof Double
+                                    || property.getValue() instanceof ContentletRelationships
                     )
             ) {
                 throw new DotContentletStateException(
@@ -7087,8 +7148,6 @@ public class ESContentletAPIImpl implements ContentletAPI {
                     contentlet.setFolder((String) value);
                 } else if (isSetPropertyVariable(conVariable)) {
                     contentlet.setProperty(conVariable, value);
-                } else if (conVariable.equals(Contentlet.VARIANT_ID)) {
-                    contentlet.setVariantId(value.toString());
                 } else if (velFieldmap.get(conVariable) != null) {
                     Field field = velFieldmap.get(conVariable);
                     if (isFieldTypeString(field)) {
@@ -7190,7 +7249,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> find(Category category, long languageId, boolean live, String orderBy,
             User user, boolean respectFrontendRoles)
             throws DotDataException, DotContentletStateException, DotSecurityException {
-        List<Category> cats = new ArrayList<Category>();
+        List<Category> cats = new ArrayList<>();
         return find(cats, languageId, live, orderBy, user, respectFrontendRoles);
     }
 
@@ -7199,7 +7258,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             String orderBy, User user, boolean respectFrontendRoles)
             throws DotDataException, DotContentletStateException, DotSecurityException {
         if (categories == null || categories.size() < 1) {
-            return new ArrayList<Contentlet>();
+            return new ArrayList<>();
         }
         StringBuffer buffy = new StringBuffer();
         buffy.append("+type:content +deleted:false");
@@ -7310,7 +7369,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             } else if (value instanceof String) {
                 try {
                     contentlet.setFloatProperty(field.getVelocityVarName(),
-                            new Float((String) value));
+                            Float.valueOf((String)value));
                 } catch (Exception e) {
                     if (value != null && value.toString().length() != 0) {
                         contentlet.getMap().put(field.getVelocityVarName(), (String) value);
@@ -7325,7 +7384,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             } else if (value instanceof String) {
                 try {
                     contentlet.setLongProperty(field.getVelocityVarName(),
-                            new Long((String) value));
+                            Long.valueOf((String)value));
                 } catch (Exception e) {
                     //If we throw this exception here.. the contentlet will never get to the validateContentlet Method
                     throw new DotContentletStateException("Unable to set string value as a Long");
@@ -8147,7 +8206,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         Structure st = CacheLocator.getContentTypeCache()
                 .getStructureByInode(contentlet.getStructureInode());
         ContentletRelationships relationshipsData = new ContentletRelationships(contentlet);
-        List<ContentletRelationshipRecords> relationshipsRecords = new ArrayList<ContentletRelationshipRecords>();
+        List<ContentletRelationshipRecords> relationshipsRecords = new ArrayList<>();
         relationshipsData.setRelationshipsRecords(relationshipsRecords);
         for (Entry<Relationship, List<Contentlet>> relEntry : contentRelationships.entrySet()) {
             Relationship relationship = relEntry.getKey();
@@ -8530,23 +8589,19 @@ public class ESContentletAPIImpl implements ContentletAPI {
      * @throws DotContentletStateException
      */
     private Contentlet findWorkingContentlet(Contentlet content)
-            throws DotSecurityException, DotDataException, DotContentletStateException {
-        Contentlet con = null;
-        List<Contentlet> workingCons = new ArrayList<Contentlet>();
+            throws DotDataException, DotContentletStateException {
+        Contentlet workingCons = null;
         if (InodeUtils.isSet(content.getIdentifier())) {
-            workingCons = contentFactory.findContentletsByIdentifier(content.getIdentifier(), false,
-                    content.getLanguageId());
+            workingCons = contentFactory.findContentletByIdentifier(content.getIdentifier(), false,
+                    content.getLanguageId(), content.getVariantId());
+
+            if (!UtilMethods.isSet(workingCons)) {
+                workingCons = contentFactory.findContentletByIdentifier(content.getIdentifier(), false,
+                        content.getLanguageId(), VariantAPI.DEFAULT_VARIANT.name());
+            }
         }
-        if (workingCons.size() > 0) {
-            con = workingCons.get(0);
-        }
-        if (workingCons.size() > 1) {
-            Logger.warn(this,
-                    "Multiple working contentlets found for identifier:" + content.getIdentifier()
-                            + " with languageid:" + content.getLanguageId()
-                            + " returning the lastest modified.");
-        }
-        return con;
+
+        return workingCons;
     }
 
     /**
@@ -8592,12 +8647,12 @@ public class ESContentletAPIImpl implements ContentletAPI {
     @Override
     public List<String> findFieldValues(String structureInode, Field field, User user,
             boolean respectFrontEndRoles) throws DotDataException {
-        List<String> result = new ArrayList<String>();
+        List<String> result = new ArrayList<>();
 
         List<Contentlet> contentlets;
         if (field.isIndexed()) {
-            contentlets = new ArrayList<Contentlet>();
-            List<Contentlet> tempContentlets = new ArrayList<Contentlet>();
+            contentlets = new ArrayList<>();
+            List<Contentlet> tempContentlets = new ArrayList<>();
             int limit = 500;
 
             StringBuilder query = new StringBuilder(
@@ -8834,7 +8889,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         if (fields == null || fields.size() < 1) {
             throw new ValidationException("No Fields found for Content");
         }
-        Map<String, String> dbColToObjectAttribute = new HashMap<String, String>();
+        Map<String, String> dbColToObjectAttribute = new HashMap<>();
         for (com.dotcms.contenttype.model.field.Field field : fields) {
             dbColToObjectAttribute.put(field.dbColumn(), field.variable());
         }
@@ -8852,7 +8907,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                 query.getSelectAttributes().add(title);
             }
         } else {
-            List<String> atts = new ArrayList<String>();
+            List<String> atts = new ArrayList<>();
             atts.add("*");
             atts.add(title);
             query.setSelectAttributes(atts);
@@ -9514,17 +9569,17 @@ public class ESContentletAPIImpl implements ContentletAPI {
         contentFactory.updateUserReferences(userToReplace, replacementUserId, user);
     }
 
+    static final String CONTENTLET_URL_MAP_FOR_CONTENT_404 = "URL_MAP_FOR_CONTENT_404";
+
     @CloseDBIfOpened
     @Override
     public String getUrlMapForContentlet(Contentlet contentlet, User user,
             boolean respectFrontendRoles) throws DotSecurityException, DotDataException {
         // no structure, no inode, no workee
-        if (!InodeUtils.isSet(contentlet.getInode()) || !InodeUtils.isSet(
-                contentlet.getStructureInode())) {
+        if (UtilMethods.isEmpty(()->contentlet.getInode())) {//NOSONAR
             return null;
         }
 
-        final String CONTENTLET_URL_MAP_FOR_CONTENT_404 = "URL_MAP_FOR_CONTENT_404";
         String result = (String) contentlet.getMap().get(URL_MAP_FOR_CONTENT_KEY);
         if (result != null) {
             if (CONTENTLET_URL_MAP_FOR_CONTENT_404.equals(result)) {
@@ -9534,9 +9589,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
 
         // if there is no detail page, return
-        Structure structure = CacheLocator.getContentTypeCache()
-                .getStructureByInode(contentlet.getStructureInode());
-        if (!UtilMethods.isSet(structure.getDetailPage())) {
+        ContentType type = Try.of(contentlet::getContentType).getOrNull();
+        if (UtilMethods.isEmpty(() -> type.detailPage())) { //NOSONAR
             return null;
         }
 
@@ -9544,11 +9598,11 @@ public class ESContentletAPIImpl implements ContentletAPI {
         Host host = APILocator.getHostAPI().find(id.getHostId(), user, respectFrontendRoles);
 
         // URL MAPPed
-        if (UtilMethods.isSet(structure.getUrlMapPattern())) {
-            List<RegExMatch> matches = RegEX.find(structure.getUrlMapPattern(), "({[^{}]+})");
+        if (UtilMethods.isSet(type.urlMapPattern())) {
+            List<RegExMatch> matches = RegEX.find(type.urlMapPattern(), "({[^{}]+})");
             String urlMapField;
             String urlMapFieldValue;
-            result = structure.getUrlMapPattern();
+            result = type.urlMapPattern();
             for (RegExMatch match : matches) {
                 urlMapField = match.getMatch();
                 urlMapFieldValue = contentlet.getStringProperty(
@@ -9561,17 +9615,24 @@ public class ESContentletAPIImpl implements ContentletAPI {
                 if (UtilMethods.isSet(urlMapFieldValue)) {
                     result = result.replaceAll(urlMapField, urlMapFieldValue);
                 } else {
-                    result = result.replaceAll(urlMapField, "");
+                    // urlmap property not found on content
+                    result = null;
+                    break;
                 }
             }
         }
 
         // or Detail page with id=uuid
         else {
-            IHTMLPage p = loadPageByIdentifier(structure.getDetailPage(), false, user,
-                    respectFrontendRoles);
-            if (p != null && UtilMethods.isSet(p.getIdentifier())) {
-                result = p.getURI() + "?id=" + contentlet.getInode();
+            final Identifier detailPageId = APILocator.getIdentifierAPI().find(type.detailPage());
+            if (UtilMethods.isEmpty(() -> detailPageId.getPath())) { //NOSONAR
+                contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, CONTENTLET_URL_MAP_FOR_CONTENT_404);
+                return null;
+            }
+
+
+            if (UtilMethods.isSet(() -> detailPageId.getId())) { //NOSONAR
+                result = detailPageId.getPath() + "?id=" + contentlet.getInode();
             }
         }
 
@@ -9584,10 +9645,11 @@ public class ESContentletAPIImpl implements ContentletAPI {
             }
         }
 
-        if (result == null) {
-            result = CONTENTLET_URL_MAP_FOR_CONTENT_404;
+        if (UtilMethods.isEmpty( result )) {
+            contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, CONTENTLET_URL_MAP_FOR_CONTENT_404);
+        }else {
+            contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, result);
         }
-        contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, result);
         return result;
     }
 
@@ -9744,7 +9806,9 @@ public class ESContentletAPIImpl implements ContentletAPI {
 
                 return true;
             } else if (!APILocator.getPermissionAPI().doesUserHavePermission(
-                    contentlet, PermissionAPI.PERMISSION_EDIT, user, respectFrontendRoles)) {
+                        contentlet, PermissionAPI.PERMISSION_EDIT, user, respectFrontendRoles)
+                    && !APILocator.getPermissionAPI().doesUserHavePermission(
+                        contentlet.getContentType(), PermissionAPI.PERMISSION_EDIT, user, respectFrontendRoles)) {
 
                 throw new DotLockException("User: " + (user != null ? user.getUserId() : "Unknown")
                         + " does not have Edit Permissions to lock content: " + (contentlet != null
@@ -9791,7 +9855,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public long indexCount(String luceneQuery, User user, boolean respectFrontendRoles)
             throws DotDataException, DotSecurityException {
         boolean isAdmin = false;
-        List<Role> roles = new ArrayList<Role>();
+        List<Role> roles = new ArrayList<>();
         if (user == null && !respectFrontendRoles) {
             throw new DotSecurityException(
                     "You must specify a user if you are not respecting frontend roles");
@@ -9825,7 +9889,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                 "MM/dd/yyyy",
                 "hh:mm:ss aa", "HH:mm:ss", "yyyy-MM-dd"};
 
-        List<Map<String, String>> result = new ArrayList<Map<String, String>>();
+        List<Map<String, String>> result = new ArrayList<>();
 
         String structureInode = CacheLocator.getContentTypeCache()
                 .getStructureByVelocityVarName(structureVariableName).getInode();
