@@ -32,7 +32,7 @@ import com.dotcms.repackage.net.sf.hibernate.HibernateException;
 
 public class FixTaskFixStructureTable  implements FixTask {
 
-	private List <Map<String, String>> modifiedData= new  ArrayList <Map<String, String>>();
+	private List <Map<String, String>> modifiedData= new  ArrayList <>();
 	
 	
 	public List <Map <String,Object>> executeFix() throws DotDataException, DotRuntimeException {
@@ -40,7 +40,7 @@ public class FixTaskFixStructureTable  implements FixTask {
 		Logger.info(CMSMaintenanceFactory.class,
 				"Beginning fixAssetsInconsistencies");
 		int total = 0;
-    	List <Map <String,Object>> returnValue= new ArrayList <Map <String,Object>> ();
+    	List <Map <String,Object>> returnValue= new ArrayList <> ();
 
 
 		
@@ -91,7 +91,7 @@ public class FixTaskFixStructureTable  implements FixTask {
 				getModifiedData();
 				total =total + dc.getResults().size();
 				FixAssetsProcessStatus.setTotal(total);
-				List<String> inodesToClean = new ArrayList<String>();
+				List<String> inodesToClean = new ArrayList<>();
 				boolean runDelete = false;
 				for (HashMap<String, String> r : results) {
 					inodesToClean.add(r.get("inode"));
@@ -123,7 +123,7 @@ public class FixTaskFixStructureTable  implements FixTask {
 				if (!x.equals(Inode.class)){
 					Object o;
 					try {
-						o = x.newInstance();
+						o = x.getDeclaredConstructor().newInstance();
 					} catch (Exception e) {
 						Logger.info(MaintenanceUtil.class, "Unable to instaniate object");
 						Logger.debug(MaintenanceUtil.class,"Unable to instaniate object", e);
@@ -145,7 +145,7 @@ public class FixTaskFixStructureTable  implements FixTask {
 				if (!x.equals(Inode.class)){
 					Object o;
 					try {
-						o = x.newInstance();
+						o = x.getDeclaredConstructor().newInstance();
 					} catch (Exception e) {
 						Logger.info(MaintenanceUtil.class,"Unable to instaniate object");
 						Logger.debug(MaintenanceUtil.class,"Unable to instaniate object", e);
