@@ -48,7 +48,7 @@ public class NotifyAssigneeActionlet extends WorkFlowActionlet {
 	
 		if(params.get("isHtml") != null && params.get("isHtml").getValue()!=null){
 			try{
-				isHtml = new Boolean(params.get("isHtml").getValue());
+				isHtml = Boolean.valueOf(params.get("isHtml").getValue());
 			}
 			catch(Exception e){
 				
@@ -75,7 +75,7 @@ public class NotifyAssigneeActionlet extends WorkFlowActionlet {
 		if(paramList ==null){
 			synchronized (this.getClass()) {
 				if(paramList ==null){
-					paramList = new ArrayList<WorkflowActionletParameter>();
+					paramList = new ArrayList<>();
 					paramList.add(new WorkflowActionletParameter("emailSubject", "Email Subject", "", false));
 					paramList.add(new WorkflowActionletParameter("emailBody", "Email Message", null, false));
 					paramList.add(new WorkflowActionletParameter("isHtml", "Is Html?", "true", false));
