@@ -251,7 +251,7 @@ public class FolderResourceImpl extends BasicFolderResourceImpl implements Locka
 	 * @see com.bradmcevoy.http.GetableResource#getMaxAgeSeconds()
 	 */
 	public Long getMaxAgeSeconds() {
-		return new Long(0);
+		return Long.valueOf(0);
 	}
 	
 	@Override
